feat: marketlens: user auth & profile management

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ VITE_FMP_API_KEY=your_fmp_api_key_here
 
 # Add other API keys as needed below
 # VITE_SOME_OTHER_API_KEY=your_api_key_here
+
+# Firebase configuration
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
+VITE_FIREBASE_MEASUREMENT_ID=
