--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 # Replace with your actual API key
 VITE_ALPHA_VANTAGE_API_KEY=SS6K4FX09YHMRX9B
 VITE_FMP_API_KEY=rbWV8KNnt7qyZdFgQTM1e5lX0nKz1yBL
+
+# Firebase configuration
+VITE_FIREBASE_API_KEY="AIzaSyDE-QX6E1-14bvMuuAvVon2RYQx0qNKpy4"
+VITE_FIREBASE_AUTH_DOMAIN="market-lens-ae2a9.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="market-lens-ae2a9"
+VITE_FIREBASE_STORAGE_BUCKET="market-lens-ae2a9.firebasestorage.app"
+VITE_FIREBASE_MESSAGING_SENDER_ID="301650889695"
+VITE_FIREBASE_APP_ID="1:301650889695:web:a41a1ebcde943e2436d26a"
+VITE_FIREBASE_MEASUREMENT_ID="G-0NDELZQ5QL"
