--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.9",
     "@reduxjs/toolkit": "^2.6.1",
     "apexcharts": "^4.5.0",
+    "firebase": "^11.7.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
