feat: marketlens: prepare for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,12 @@
-# Alpha Vantage API key - Get one at https://www.alphavantage.co/support/#api-key
+# API Keys
 VITE_ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
-
-# Financial Modeling Prep API key
 VITE_FMP_API_KEY=your_fmp_api_key_here
 
-# Add other API keys as needed below
-# VITE_SOME_OTHER_API_KEY=your_api_key_here
-
-# Firebase configuration
-VITE_FIREBASE_API_KEY=
-VITE_FIREBASE_AUTH_DOMAIN=
-VITE_FIREBASE_PROJECT_ID=
-VITE_FIREBASE_STORAGE_BUCKET=
-VITE_FIREBASE_MESSAGING_SENDER_ID=
-VITE_FIREBASE_APP_ID=
-VITE_FIREBASE_MEASUREMENT_ID=
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your_firebase_api_key
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
