--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@reduxjs/toolkit": "^2.6.1",
     "apexcharts": "^4.5.0",
     "firebase": "^11.7.3",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
